unpackaged/main/default/objects/Gearset_Deployment__c/Gearset_Deployment__c.object-meta.xml
<CustomObject>
    <label>Gearset Deployment</label>
    <nameField>
        <label>Gearset Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gearset Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>