unpackaged/main/default/objects/Gearset_Deployment__c/fields/Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Deployment Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>