unpackaged/main/default/objects/Gearset_Deployment__c/fields/Friendly_Name__c.field-meta.xml
<CustomField>
    <fullName>Friendly_Name__c</fullName>
    <label>Friendly Name</label>
    <type>TextArea</type>
</CustomField>