unpackaged/main/default/objects/Gearset_Deployment__c/fields/Salesforce_Final_Deployment_Id__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Final_Deployment_Id__c</fullName>
    <externalId>true</externalId>
    <label>Salesforce Final Deployment Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>