unpackaged/main/default/objects/Gearset_Deployment__c/fields/Source_Metadata_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Metadata_Location__c</fullName>
    <label>Source Metadata Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>