unpackaged/main/default/objects/Gearset_Deployment__c/fields/Source_Username__c.field-meta.xml
<CustomField>
    <fullName>Source_Username__c</fullName>
    <label>Source Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>