unpackaged/main/default/objects/Gearset_Deployment__c/fields/Target_Metadata_Location__c.field-meta.xml
<CustomField>
    <fullName>Target_Metadata_Location__c</fullName>
    <label>Target Metadata Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>