unpackaged/main/default/objects/Gearset_Deployment__c/fields/Target_Username__c.field-meta.xml
<CustomField>
    <fullName>Target_Username__c</fullName>
    <label>Target Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>