unpackaged/main/default/objects/Gearset_Deployment__c/fields/Time_of_Deployment__c.field-meta.xml
<CustomField>
    <fullName>Time_of_Deployment__c</fullName>
    <label>Time of Deployment</label>
    <type>DateTime</type>
</CustomField>