unpackaged/main/default/objects/Gearset_Deployment__c/listViews/All_Deployments.listView-meta.xml
<ListView>
    <fullName>All_Deployments</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Time_of_Deployment__c</columns>
    <columns>Type__c</columns>
    <filterScope>Mine</filterScope>
    <label>All Deployments</label>
</ListView>